# machine-learning-portfolio

./: LICENSE  README.md
01-linear-regression/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
01-linear-regression/.github/workflows/: ci.yml
01-linear-regression/configs/: config.yaml
01-linear-regression/docs/: theory.md
01-linear-regression/notebooks/: 01_eda_and_modeling.ipynb
01-linear-regression/scripts/: predict.py  train.py
01-linear-regression/src/api/: app.py
01-linear-regression/src/data/: loader.py  preprocessor.py
01-linear-regression/src/evaluation/: diagnostics.py  metrics.py  visualizations.py
01-linear-regression/src/models/: linear_regression_scratch.py  linear_regression_sklearn.py
01-linear-regression/src/utils/: io.py  logger.py
01-linear-regression/tests/: test_api.py  test_metrics.py  test_models.py  test_preprocessor.py
